[package]
name = "rdpscan"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"
rand = "0.8"
ureq = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
chacha20poly1305 = "0.10"
blake3 = "1.5"
zeroize = "1.7"
image = { version = "0.24", default-features = false, features = ["png"] }
# New dependencies for enhanced features
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
ipnetwork = "0.20"
cidr = "0.2"
regex = "1.10"
toml = "0.8"
dirs = "5.0"
notify-rust = "4.10"
rodio = "0.17"
rfd = "0.14"
parking_lot = "0.12"
dashmap = "5.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["tlhelp32", "processthreadsapi", "winnt", "handleapi", "debugapi", "errhandlingapi", "sysinfoapi", "winuser", "winreg", "winsvc", "libloaderapi", "memoryapi", "fileapi"] }
